--- a/cv.htm
+++ b/cv.htm
@@ -18,7 +18,7 @@
     <div class="cv part" id="coordonnee">
 
 ><a href="mehdy.lenne59110@gmail.com"> 
-<img src="./asset/mail.jpeg" alt="mail icon">
+<img src="./asset/mailneonrouge.jpeg" alt="mail icon">
 ><p>mehdy.lenne59110@gmail.com</p>
 </a>
 <a href="https://github.com/Mehdy59110/biblioE2C" target="_blank">
@@ -61,11 +61,16 @@
 <header>
     <h3>centre d'intret</h3>
 </header>
+<img src="./asset/cyber security.jpeg" alt="cybersécurité">
 <p>La cybersécurité m’intéresse particulièrement en raison de son rôle crucial dans la protection des données et des systèmes informatiques. J’aime analyser les menaces, comprendre les failles de sécurité et mettre en place des solutions pour y remédier. Ce domaine en constante évolution offre des défis techniques stimulants et nécessite une veille technologique permanente. Contribuer à la sécurité numérique me semble essentiel dans un monde de plus en plus connecté.
 
 
-
+<img src="./asset/crée un site internet.jpeg" alt="crée un site internet">
+<p>La création de sites internet est un centre d’intérêt passionnant qui allie créativité et compétences techniques. Elle permet de concevoir des interfaces intuitives, esthétiques et fonctionnelles pour répondre aux besoins des utilisateurs. C’est un domaine en constante évolution, qui offre l’opportunité d’apprendre de nouveaux langages, outils et tendances du web. Cela permet également d’exprimer sa créativité tout en résolvant des problématiques concrètes.
 </p>
+
+
+
 
 
 
